--- a/todo/templates/todo/edit_item.html
+++ b/todo/templates/todo/edit_item.html
@@ -7,13 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Add an Item: </h1>
-    <form method="POST" action="add">
+    <h1>Edit an Item: </h1>
+    <form method="POST">
         {% csrf_token %}
         {{ form.as_p }}
         <div>
             <p>
-                <button type="submit">Add item</button>
+                <button type="submit">Edit item</button>
             </p>
         </div>
     </form>
