--- a/todo/templates/todo/edit_item.html
+++ b/todo/templates/todo/edit_item.html
@@ -13,7 +13,7 @@
         {{ form.as_p }}
         <div>
             <p>
-                <button type="submit">Edit item</button>
+                <button type="submit">Update item</button>
             </p>
         </div>
     </form>
